# Pico2_18channelServoDriverSystem

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  SERVO_360_GUIDE.md  check_crc.py  config.json  platformio.ini  test_gpio_monitor.py  test_pwm_direct.py  test_servo.py  test_servo_cycle.py  test_servo_log.txt  verify_crc.py  功能需求文档.md  调试输出.txt
ControlManagementSystem/: README.md  __init__.py  diagnose.py  main.py  project_20251025_190342.json  test_servo_360_planner.py
ControlManagementSystem/core/: config_manager.py  gcode_generator.py  logger.py  project_manager.py  serial_comm.py  servo_commander.py
ControlManagementSystem/models/: component.py  timeline_data.py
ControlManagementSystem/tools/: README_DEBUG.md  __init__.py  ai_debug.py  log_analyzer.py
ControlManagementSystem/ui/: component_palette.py  dialogs.py  dialogs_old.py  main_window.py  motor_track.py  timeline_widget.py
docs/: ARCHITECTURE_OVERVIEW.md  LOOK_AHEAD_PLANNER.md  MOTION_PLANNING_PLAN.md  PLANNER_USAGE_EXAMPLE.md  SERVO_360_PLANNER_INTEGRATION.md  SYSTEM_FLOW.md  运动规划实现计划.md
include/: qp_config.h
include/ao/: ao_communication.h  ao_motion.h  ao_system.h
include/communication/: commands.h  crc16.h  protocol.h  usb_handler.h
include/config/: config.h  pinout.h
include/events/: event_types.h  events.h
include/monitor/: gpio_monitor.h
include/motion/: interpolation.h  motion_buffer.h  motion_scheduler.h  planner.h
include/pwm/: pwm_driver.h
include/servo/: servo_360.h  servo_control.h  servo_manager.h
include/storage/: flash_storage.h  param_manager.h
include/tasks/: task_communication.h  task_motion.h  task_pwm.h
include/test/: auto_test.h
include/utils/: error_handler.h  ring_buffer.h  usb_bridge.h
platform-raspberrypi-develop/platform-raspberrypi-develop/: .gitignore  platform.json  platform.py
platform-raspberrypi-develop/platform-raspberrypi-develop/.github/workflows/: examples.yml
platform-raspberrypi-develop/platform-raspberrypi-develop/boards/: db_rp2350.json
platform-raspberrypi-develop/platform-raspberrypi-develop/builder/: main.py
platform-raspberrypi-develop/platform-raspberrypi-develop/builder/frameworks/: _bare.py  _build_pioasm.py  picosdk.py
platform-raspberrypi-develop/platform-raspberrypi-develop/builder/frameworks/arduino/: arduino.py
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/arduino-littlefs/: README.md  platformio.ini
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/arduino-littlefs/data/: file1.txt
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/arduino-littlefs/src/: main.cpp
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/arduino-pioasm-blink/: README.md  platformio.ini
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/arduino-pioasm-blink/src/: blink.pio  main.cpp
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-blink/: README.md  platformio.ini
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-blink/src/: main.c
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-pioasm-blink/: platformio.ini
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-pioasm-blink-auto/: README.md
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-pioasm-blink-auto/src/: main.c
platform-raspberrypi-develop/platform-raspberrypi-develop/examples/picosdk-pioasm-blink/src/: blink.pio  main.c
platform-raspberrypi-develop/platform-raspberrypi-develop/misc/: suggest_picosdk_variants.py
scripts/: add_freertos.py
src/: FreeRTOSConfig.h  main.c  qp_port_init.c
src/ao/: ao_communication.c  ao_motion.c  ao_system.c
src/communication/: cmd_motion_buffer.c  cmd_servo_360.c  commands.c  crc16.c  protocol.c  usb_handler.c
src/monitor/: gpio_monitor.c
src/motion/: interpolation.c  motion_buffer.c  motion_scheduler.c  planner.c
src/pwm/: pwm_driver.c
src/servo/: servo_360.c  servo_control.c  servo_manager.c
src/storage/: flash_storage.c  param_manager.c
src/tasks/: task_communication.c  task_motion.c  task_pwm.c
src/test/: auto_test.c
src/utils/: error_handler.c  ring_buffer.c  usb_bridge.c
